k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oliveyoung
  labels:
    app: oliveyoung
    environment: dev
