k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oliveyoung-api
  namespace: oliveyoung
  labels:
    app: oliveyoung-api
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "oliveyoung-api"
    tags.datadoghq.com/version: "1.0.0"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: oliveyoung-api
  template:
    metadata:
      labels:
        app: oliveyoung-api
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "oliveyoung-api"
        tags.datadoghq.com/version: "1.0.0"
      annotations:
        # --- Prometheus ---
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
        # --- Datadog APM (트레이스 자동 주입) ---
        admission.datadoghq.com/java-lib.version: "latest"
        # --- Datadog 로그 수집 ---
        ad.datadoghq.com/oliveyoung-api.logs: '[{"source": "java", "service": "oliveyoung-api"}]'
        # --- Datadog 메트릭 수집 ---
        ad.datadoghq.com/oliveyoung-api.check_names: '["openmetrics"]'
        ad.datadoghq.com/oliveyoung-api.init_configs: '[{}]'
        ad.datadoghq.com/oliveyoung-api.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:8080/actuator/prometheus",
              "namespace": "spring_boot",
              "metrics": ["*"]
            }
          ]
    spec:
      containers:
        - name: oliveyoung-api
          # CI/CD에서 sed로 IMAGE_TAG를 커밋 SHA로 자동 교체
          # ArgoCD가 이 태그 변경을 감지하여 롤링 업데이트 수행
          image: 160884802838.dkr.ecr.ap-northeast-2.amazonaws.com/oliveyoung-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              ##test
            initialDelaySeconds: 90
            periodSeconds: 15
